# SheetSmith

./: .env.example  .gitignore  IMPLEMENTATION_DIAGNOSTICS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_PROPOSAL.md  README.md  SAFETY_FEATURES_SUMMARY.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: COST_REDUCTION.md  DIAGNOSTICS.md  IMPLEMENTATION_SUMMARY.md  OPS_API.md  PLACEHOLDER_IMPLEMENTATION.md  deterministic-mass-replace.md  mapping_integration_examples.md  placeholder-workflow.md
sample_data/: README.md  example_spreadsheet.json
sample_data/example_patches/: corruption_ratio_update.json  teammate_replacement.json
sample_data/logic_blocks/: status_damage_mapping.json  teammate_buff_template.json
sample_data/rules/: formula_conventions.json
src/sheetsmith/: __init__.py  cli.py  config.py
src/sheetsmith/agent/: __init__.py  orchestrator.py  prompts.py
src/sheetsmith/api/: __init__.py  app.py  routes.py
src/sheetsmith/engine/: __init__.py  analyzer.py  (+6 more)
static/: app.js  costs.js  index-old.html  index.html  styles-old.css  styles.css
tests/: __init__.py  conftest.py  test_api_health.py  test_api_placeholders.py  test_api_routes.py  test_api_safety.py  test_config.py  test_cost_tracking.py  test_deterministic_replacer.py  test_diagnostic_wrapper.py  test_diagnostics.py  test_enhanced_safety.py  test_llm_budget.py  test_mapping.py  test_memory_models.py  test_modes.py  test_openrouter_client.py  test_ops.py  test_ops_safety.py  test_placeholders.py  test_prompts.py  test_safety.py  test_sheets_models.py  test_tools_registry.py
(+44 files in other folders)
