[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sheetsmith"
version = "0.1.0"
description = "LLM-based agent for automating Google Sheets maintenance and updates"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "google-api-python-client>=2.108.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "anthropic>=0.39.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.2",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
sheetsmith = "sheetsmith.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sheetsmith"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
